tests/snapshots/examples_fixtures/functions__forward_reference.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/functions/forward_reference.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `greet`.

  examples/functions/forward_reference.flx:11:22
   |
11 |         let result = greet("World");
   |                      ^^^^^

Hint:
  Define it first: let greet = ...;

Help:
  Did you mean one of: `get`, `rest`?


error[E004]: Undefined Variable

I can't find a value named `isEven`.

  examples/functions/forward_reference.flx:15:15
   |
15 |         print(isEven(10));
   |               ^^^^^^

Hint:
  Define it first: let isEven = ...;


error[E004]: Undefined Variable

I can't find a value named `isOdd`.

  examples/functions/forward_reference.flx:16:15
   |
16 |         print(isOdd(10));
   |               ^^^^^

Hint:
  Define it first: let isOdd = ...;


error[E004]: Undefined Variable

I can't find a value named `isEven`.

  examples/functions/forward_reference.flx:17:15
   |
17 |         print(isEven(7));
   |               ^^^^^^

Hint:
  Define it first: let isEven = ...;


error[E004]: Undefined Variable

I can't find a value named `isOdd`.

  examples/functions/forward_reference.flx:18:15
   |
18 |         print(isOdd(7));
   |               ^^^^^

Hint:
  Define it first: let isOdd = ...;


error[E004]: Undefined Variable

I can't find a value named `isOdd`.

  examples/functions/forward_reference.flx:31:9
   |
31 |         isOdd(n - 1);
   |         ^^^^^

Hint:
  Define it first: let isOdd = ...;

Found 6 errors.
== stdout ==
<not executed>
